- Hide back button on mobile unless in PWA mode - Make error messages on registration and login more pronounced - Fix Accessories button on homepage

--- a/src/components/registrationform.main.less
+++ b/src/components/registrationform.main.less
@@ -90,4 +90,11 @@
       }
     }
   }
+
+  .feedback-label {
+    color: red;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 15px;
+  }
 }
